# financial-python

./: README.md  main.py  moving_average_profile.prof  profile.html  profile.json  pyproject.toml
src/: Monte-Carlo Simulation of Discrete-Time Stochastic Processes.ipynb
src/financial_python/: __init__.py  simple_strategy.py
src/financial_python/backtesting/: data_loader.py  main.py  plots.py  strategy.py
src/financial_python/portfolio_return_simulation/: main.py  portfolio_return.py  portfolio_stats.py  simulate_price_path.py
tests/: test_download_data.py  test_moving_average.py  test_moving_average_strategy.py
