[tool.poetry]
name = "financial-python"
version = "0.1.0"
description = ""
authors = ["mattiasu96 <mattia.surricchio@prima.it>"]
readme = "README.md"
packages = [{include = "financial_python"}]

[tool.poetry.dependencies]
python = "3.10.2"
scipy = "^1.11.1"
matplotlib = "^3.7.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
