[project]
name = "financial-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mattiasu96", email = "37300216+mattiasu96@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.2",
    "numpy>=2.3.5",
]

[project.scripts]
financial-python = "financial_python:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.8",
    "scalene>=1.5.55",
]
